--- a/KXOJ/MainWindow.xib
+++ b/KXOJ/MainWindow.xib
@@ -27,7 +27,7 @@
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <nil key="simulatedBottomBarMetrics"/>
-            <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" selectedItem="378" id="107">
+            <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" selectedItem="pWh-35-63F" id="107">
                 <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -50,6 +50,14 @@
                                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
+                                    <webView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" id="svn-0E-d2G">
+                                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="108" id="6wO-Vl-uVY"/>
+                                        </connections>
+                                    </webView>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="237">
                                         <rect key="frame" x="0.0" y="411" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -121,25 +129,6 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </toolbar>
-                                    <webView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" id="svn-0E-d2G">
-                                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <connections>
-                                            <outlet property="delegate" destination="108" id="6wO-Vl-uVY"/>
-                                        </connections>
-                                    </webView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_logo_footer.png" id="0fo-4X-Az3">
-                                        <rect key="frame" x="0.0" y="275" width="320" height="100"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A Community Outreach of Anderson University" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rXn-U6-7LM">
-                                        <rect key="frame" x="50" y="383" width="220" height="41"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
@@ -718,7 +707,7 @@
         <image name="alarm.png" width="30" height="30"/>
         <image name="arrow_left.png" width="15" height="20"/>
         <image name="arrow_right.png" width="15" height="20"/>
-        <image name="bg_radio_page.png" width="640" height="1136"/>
+        <image name="bg_radio_page.png" width="1800" height="1800"/>
         <image name="btn_yellow.png" width="552" height="88"/>
         <image name="call.png" width="64" height="64"/>
         <image name="email.png" width="64" height="64"/>
@@ -729,7 +718,6 @@
         <image name="icon_shoutout.png" width="30" height="30"/>
         <image name="icon_social.png" width="30" height="30"/>
         <image name="icon_web.png" width="30" height="30"/>
-        <image name="img_logo_footer.png" width="640" height="239"/>
         <image name="instagramicon.png" width="64" height="64"/>
         <image name="listenbutton.png" width="298" height="41"/>
         <image name="new-app-background.jpg" width="640" height="960"/>
