add top logo to radio page

--- a/KXOJ/MainWindow.xib
+++ b/KXOJ/MainWindow.xib
@@ -27,7 +27,7 @@
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <nil key="simulatedBottomBarMetrics"/>
-            <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" selectedItem="517" id="107">
+            <tabBar key="tabBar" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" selectedItem="pWh-35-63F" id="107">
                 <rect key="frame" x="0.0" y="519" width="320" height="49"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -46,8 +46,8 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_radio_page.png" id="LrX-cs-Jrh">
-                                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_splash.png" id="LrX-cs-Jrh">
+                                        <rect key="frame" x="0.0" y="20" width="320" height="455"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
                                     <webView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" id="svn-0E-d2G">
@@ -129,6 +129,10 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </toolbar>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_top_logo.png" id="hYj-kp-kwt">
+                                        <rect key="frame" x="121" y="78" width="78" height="42"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
@@ -674,7 +678,7 @@
         <image name="alarm.png" width="30" height="30"/>
         <image name="arrow_left.png" width="15" height="20"/>
         <image name="arrow_right.png" width="15" height="20"/>
-        <image name="bg_radio_page.png" width="1800" height="1800"/>
+        <image name="bg_splash.png" width="640" height="1136"/>
         <image name="btn_set_alarm.png" width="552" height="88"/>
         <image name="call.png" width="64" height="64"/>
         <image name="email.png" width="64" height="64"/>
@@ -688,6 +692,7 @@
         <image name="icon_shoutout.png" width="30" height="30"/>
         <image name="icon_social.png" width="30" height="30"/>
         <image name="icon_web.png" width="30" height="30"/>
+        <image name="img_top_logo.png" width="240" height="114"/>
         <image name="instagramicon.png" width="64" height="64"/>
         <image name="listenbutton.png" width="298" height="41"/>
         <image name="new-app-background.jpg" width="640" height="960"/>
