--- a/KXOJ/MainWindow.xib
+++ b/KXOJ/MainWindow.xib
@@ -129,10 +129,6 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </toolbar>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_top_logo.png" id="hYj-kp-kwt">
-                                        <rect key="frame" x="121" y="78" width="78" height="42"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="CIY-qW-Laf">
                                         <rect key="frame" x="274" y="81" width="37" height="39"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -159,6 +155,10 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_logo.png" id="hYj-kp-kwt">
+                                        <rect key="frame" x="121" y="80" width="78" height="42"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
@@ -721,7 +721,7 @@
         <image name="icon_shoutout.png" width="30" height="30"/>
         <image name="icon_social.png" width="30" height="30"/>
         <image name="icon_web.png" width="30" height="30"/>
-        <image name="img_top_logo.png" width="240" height="114"/>
+        <image name="img_logo.png" width="400" height="278"/>
         <image name="instagramicon.png" width="64" height="64"/>
         <image name="listenbutton.png" width="298" height="41"/>
         <image name="new-app-background.jpg" width="640" height="960"/>
